fix weird cell alignment issue

--- a/styles/resume-2.scss
+++ b/styles/resume-2.scss
@@ -43,7 +43,7 @@ a {
   }
 
   @media print {
-    max-width: 90%;
+    max-width: 95%;
   }
 }
 
@@ -116,6 +116,8 @@ a {
 .section-detail {
   display: grid;
   grid-template-columns: 3fr 2fr;
+  grid-template-rows: min-content;
+  row-gap: var(--unit-sm);
 
   margin-bottom: var(--unit-md);
 
@@ -137,14 +139,11 @@ a {
       text-align: right;
     }
 
-
     font-weight: 500;
   }
 
   &__description {
     grid-column: 1/3;
-
-    margin-top: var(--unit-sm);
 
     font-size: var(--unit-sm);
     line-height: 1.4;
@@ -152,8 +151,6 @@ a {
 
   &__body {
     grid-column: 1/3;
-
-    margin-top: var(--unit-sm);
   }
 }
 
